--- a/squareGame/index.html
+++ b/squareGame/index.html
@@ -8,6 +8,9 @@
 </head>
 <body>
     <div id="main">
+        <div id="cursor">
+            
+        </div>
         <div id="box">
         <div class="rect">
             <div id="sq1" class="shape"><h1>1</h1></div>
